test_suite/alan-2022-examples/failing/002650_mutation.alan
source nm begin _ := else array 51 end
